typescript/checker/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode2.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            15,
        ),
        hi: BytePos(
            19,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode2.ts:2:1
  |
2 | foo1();
  | ^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            24,
        ),
        hi: BytePos(
            28,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode2.ts:3:1
  |
3 | foo1();
  | ^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            33,
        ),
        hi: BytePos(
            37,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode2.ts:4:1
  |
4 | foo1();
  | ^^^^

error: 'implements', 'interface', 'let', 'package', 'private', 'protected',  'public', 'static', or 'yield' cannot be used as an identifier in strict mode
 --> $DIR/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode2.ts:5:1
  |
5 | static();
  | ^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            42,
        ),
        hi: BytePos(
            48,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode2.ts:5:1
  |
5 | static();
  | ^^^^^^

